issues resolved of flex and button alignment

--- a/style.css
+++ b/style.css
@@ -588,7 +588,9 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     /* identical to box height */
 
     text-align: center;
@@ -602,5 +604,6 @@
   #about-section {
     display: flex;
     flex-wrap: nowrap;
+    flex-direction: column;
   }
 }
